# probspecs

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  acasxu_experiments.sh  collect_experiment_results.py  compile_experiment_results.py  environment.yaml  install.sh  pyproject.toml  run_experiments.sh  setup.py  train_networks.sh
experiments/: group_fairness_tabular.sh  input_spaces.py  mini_acs_income.py  train_on_tabular_datasets.py  utils.py
experiments/acasxu/: compare_heuristics.sh  robustness.py  run.sh  safety.py
experiments/config/: bounds.yaml  ibp.yaml  prob-and-lin-prune.yaml  (+13 more)
probspecs/: __init__.py  formula.py  input_space.py  network_bounds.py  population_model.py  population_models.py  probability_distribution.py  trinary_logic.py  utils.py  verifier.py
resources/: mnist_discriminator.pyt  mnist_generator.pyt  train_mnist_gan.py
scripts/: collect_experiment_results.py  compare_heuristics.sh  compile_compare_heuristics.py  compile_experiment_results.py  compile_random_branch_and_split_selection.py  download_datasets.py  download_resources.py  eval_mini_acs_income_networks.py  run_experiments.sh  run_miniacsincome_random_heuristics.sh  train_networks.sh
test/: conftest.py  test_formula.py  test_formula_utils.py  test_input_space.py  test_network_bounds.py  test_operators.py  test_probability_bounds.py  test_verifier.py  train_mnist_gan.py
tests/: conftest.py  test_input_space.py  test_network_bounds.py  test_population_models_encode_one_hot.py  test_probability_bounds.py  test_trinary_logic.py  test_verifier.py  train_mnist.py  train_mnist_gan.py
(+158 files in other folders)
