[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "probspecs"
authors = [{ name = "David Boetius", email = "david.boetius@uni-konstanz.de" }]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "auto_LiRPA @ file:///${PROJECT_ROOT}/auto_LiRPA",
    "torch==1.12.1",
    "torchvision==0.13.1",
    "numpy>=1.25,<1.26",
    "scipy>=1.11,<1.12",
    "torchstats==0.1.0",
    "pandas==2.1.4",
    "seaborn>=0.12.2,<0.13",
    "dill==0.3.8",
    "tqdm>=4.66.5,<4.67",
    "frozendict>=2.3.8,<3.0",
    "rust_enum==1.1.5",
    "fairness-datasets==0.4.0",
    "miniacsincome==0.0.2",
    "multiprocess==0.70.15",
    "scikit-learn>=1.3.2,<1.4.0",
    "kmodes==0.12.2",
    "optuna>=3.5.0,<4.0",
    "matplotlib>=3.8.2,<3.9.0",
    "onnx>=1.18,<1.19",
    "onnx2pytorch @ git+https://github.com/Verified-Intelligence/onnx2pytorch.git@8447c42c3192dad383e5598edc74dddac5706ee2",
    "requests>=2.31,<3.0",
    "randomname==0.2.1",
    "ruamel.yaml==0.18.6",
    "jupyter",
    "papermill>=2.6.0,<3.0",
    "psutil>=5.9.8,<6.0",
    "py-cpuinfo>=9.0.0,<10.0.0",
    "GPUtil>=1.4.0,<2.0.0",
    "pytest>=7.4,<7.5",
]

[project.optional-dependencies]
develop = ["pdm==2.19.1", "black==24.8.0"]
all = ["probspecs[develop]"]

[tool.pdm.version]
source = "file"
path = "probspecs/__init__.py"
